# mcp-rag

./: README.md  config.json  pyproject.toml
data/docs/: clients.md  core-architecture.md  debugging.md  inspector.md  introduction.md  prompts.md  python.md  quickstart.md  resources.md  sampling.md  tools.md  transports.md  typescript.md
data/index/: docstore.json  index_store.json
src/mcp_rag/: create_index.py  data_dir.py  server.py
